9n12: Enable LCD on the AT91SAM9N12-EK board
Select the system clock as the pwm-clock source
Set the PWM clock prescaler to DIV_64
Set the pixel clock polarity to rising edge

Signed-off-by: Wenyou Yang <wenyou.yang@atmel.com>
Signed-off-by: Hong Xu <hong.xu@atmel.com>

--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -1005,7 +1005,7 @@ config FB_ATMEL
 	select FB_CFB_FILLRECT
 	select FB_CFB_COPYAREA
 	select FB_CFB_IMAGEBLIT
-	select FB_ATMEL_HLCD if ARCH_AT91SAM9X5
+	select FB_ATMEL_HLCD if (ARCH_AT91SAM9X5 || ARCH_AT91SAM9N12)
 	help
 	  This enables support for the AT91/AT32 LCD Controller.
 
