--- a/sound/soc/atmel/Kconfig
+++ b/sound/soc/atmel/Kconfig
@@ -33,6 +33,15 @@ config SND_AT91_SOC_SAM9X5_WM8731
 	  Say Y if you want to add support for audio SoC on an
 	  at91sam9x5 based board that is using WM8731 codec.
 
+config SND_AT91_SOC_SAM9N12EK_WM8904
+	tristate "SoC Audio support for WM8904 based AT91SAM9N12-EK board"
+	depends on ATMEL_SSC && SND_ATMEL_SOC && ARCH_AT91SAM9N12
+	select SND_ATMEL_SOC_SSC
+	select SND_SOC_WM8904
+	help
+	  Say Y if you want to add support for audio SoC on an
+	  AT91SAM9N12-EK board which uses WM8904 audio codec.
+
 config SND_AT32_SOC_PLAYPAQ
         tristate "SoC Audio support for PlayPaq with WM8510"
         depends on SND_ATMEL_SOC && BOARD_PLAYPAQ && AT91_PROGRAMMABLE_CLOCKS
